2002-05-17 Christian Couder <christian@kdevelop.org>
  * Move font stuff from katedocument into new katefont.h and
    katefont.cpp files, and clean up katedocument font stuff. 

2002-05-14 Christian Couder <christian@kdevelop.org>
  * Big clean up in katedocument using new katecursor stuff. 

2002-05-12  Bernd Gehrmann  <bernd@mail.berlios.de>
  * Moved browser extension from view to doc, where it belongs
  * If servicetype in the browser extension specifies an encoding,
    use that instead of user's local encoding

2002-05-11 Christian Couder <christian@kdevelop.org>
  * implement the KTextEditor::Cursor in the KateCursor class 

2002-05-04 Christoph Cullmann <cullmann@kde.org>
  * first KTextEditor::ViewPlugin which works
    drop the helloworld plugin, as it is really no good example (bad code, ..)

2002-05-04 Christian Couder <christian@kdevelop.org>
  * fix undo for comment and uncomment
	
2002-05-01 Christian Couder <christian@kdevelop.org>
  * cleanups related to the uncomment feature in katetextline and katedocument

2002-01-04 Christoph Cullmann <cullmann@kde.org>
  * the search stuff in the katedocument is rewritten now, should work mostly,
    only search for whole words is just a mess :(

2002-01-03 Christoph Cullmann <cullmann@kde.org>
  * kate app and kwrite app now use the katepart via libloader and link only
    to the kateinterfaces (which will soon be splitted into katepartinterfaces
    and kateinterfaces
  * new framework for the configpages of the katepart accessible through the 
    interfaces
  * KSpell works again ;) my god, what a buggy thingy

2001-12-01 Christoph Cullmann <cullmann@kde.org>
  * speedup for insert/removeText/Line
  * new editStart/editEnd/editAddUndo functions to make the undo/redo + update
     after edit function calls easier to understand an use in katedocument.*

2001-11-30 Joseph Wenninger <jowenn@kde.org>
  * I hopefully fixed the CSS highlighting finally. It used